force-app/main/default/objects/APR__c/APR__c.object-meta.xml
<CustomObject>
    <description>Annual Price Review.</description>
    <label>APR</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>APR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>