force-app/main/default/objects/APR__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;StarTrack&apos;, 
Billing_Account_Name__r.Calc_Customer_ID__c,
 Legal_Entity_Name_LookUp__r.Id
)</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>