force-app/main/default/objects/APR__c/fields/Billing_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_No__c</fullName>
    <formula>Billing_Account_Name__r.LEGACY_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated on the creation of an APR record, this is the account number that the APR value will be applied to.</inlineHelpText>
    <label>Billing Account No.</label>
    <type>Text</type>
</CustomField>