force-app/main/default/objects/APR__c/fields/Cust_Legal_Entity_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Cust_Legal_Entity_Revenue_Total__c</fullName>
    <label>Cust Legal Entity Revenue_Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>