force-app/main/default/objects/APR__c/fields/Customer_Correspondence_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Correspondence_Method__c</fullName>
    <label>Customer Correspondence Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto generated mailout</fullName>
            </value>
            <value>
                <fullName>Account Manager to generate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>