force-app/main/default/objects/APR__c/fields/Delegation_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Allowance__c</fullName>
    <description>To store the delegation allowance for the customer for the AP record types</description>
    <inlineHelpText>The delegation allowance for the customer</inlineHelpText>
    <label>Delegation Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>