force-app/main/default/objects/APR__c/fields/Forecast_APR_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Forecast_APR_Uplift__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &apos;StarTrack&apos;,
(Billing_Account_Revenue__c  *  Published_Rate__c),
(Customer_Revenue__c  * Published_Rate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast APR Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>