force-app/main/default/objects/APR__c/fields/Legal_Entity_Name_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APRs</relationshipLabel>
    <relationshipName>APRs</relationshipName>
    <type>Lookup</type>
</CustomField>