force-app/main/default/objects/APR__c/fields/MHS_Confirmed_Rate__c.field-meta.xml
<CustomField>
    <fullName>MHS_Confirmed_Rate__c</fullName>
    <label>MHS Confirmed Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>