force-app/main/default/objects/APR__c/fields/Sales_Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Owner__c</fullName>
    <formula>IF (
RecordType.DeveloperName = &apos;StarTrack&apos;,
Billing_Account_Name__r.Organisation__r.Sales_Director__r.FirstName
&amp; &quot; &quot; &amp;
Billing_Account_Name__r.Organisation__r.Sales_Director__r.LastName,

Legal_Entity_Name_LookUp__r.Sales_Director__r.FirstName
&amp; &quot; &quot; &amp;
Legal_Entity_Name_LookUp__r.Sales_Director__r.LastName
)</formula>
    <inlineHelpText>Auto populated based on the Legal Entity Name field, it is the Sales team owner that the Account Manager belongs to.</inlineHelpText>
    <label>Sales Team Owner</label>
    <type>Text</type>
</CustomField>