force-app/main/default/objects/APR__c/recordTypes/AP_Domestic.recordType-meta.xml
<RecordType>
    <fullName>AP_Domestic</fullName>
    <active>true</active>
    <description>AP Domestic business APR records</description>
    <label>AP Domestic</label>
</RecordType>