force-app/main/default/objects/APR__c/recordTypes/AP_International.recordType-meta.xml
<RecordType>
    <fullName>AP_International</fullName>
    <active>true</active>
    <description>AP International APR records</description>
    <label>AP International</label>
</RecordType>