force-app/main/default/objects/APR__c/recordTypes/ST_Courier.recordType-meta.xml
<RecordType>
    <fullName>ST_Courier</fullName>
    <active>true</active>
    <description>ST Courier APR record type</description>
    <label>ST Courier</label>
</RecordType>