force-app/main/default/objects/APR__c/recordTypes/StarTrack.recordType-meta.xml
<RecordType>
    <fullName>StarTrack</fullName>
    <active>true</active>
    <description>StarTrack APR records</description>
    <label>StarTrack</label>
</RecordType>