force-app/main/default/objects/APR__c/validationRules/Checkbox_only_for_APR_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkbox_only_for_APR_Admin</fullName>
    <active>true</active>
    <description>Only APR Admin users can edit the Entered in Team / PeopleSoft checkbox field</description>
    <errorConditionFormula>AND( 
 RecordType.DeveloperName = &apos;StarTrack&apos;,
ISCHANGED( Entered_in_Team_PeopleSoft__c ), 
NOT(OR( 
$Permission.APR_Admin = TRUE, 
$Profile.Name = &apos;System Administrator&apos; 
)))</errorConditionFormula>
    <errorDisplayField>Entered_in_Team_PeopleSoft__c</errorDisplayField>
    <errorMessage>You do not have access to edit this field</errorMessage>
</ValidationRule>