force-app/main/default/objects/APR__c/validationRules/Comments_field_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_field_is_mandatory</fullName>
    <active>true</active>
    <description>Comments field is mandatory when Status is Exemption, Reduction or Deferral</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
OR( 
ISPICKVAL(Status__c, &apos;Exemption&apos;),
ISPICKVAL(Status__c, &apos;Reduction&apos;),
ISPICKVAL(Status__c, &apos;Deferral&apos;),
ISPICKVAL(Status__c, &apos;Go Early&apos;)
), 
OR( 
ISBLANK(Comments__c) 
)
)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please write a comment</errorMessage>
</ValidationRule>