force-app/main/default/objects/APR__c/validationRules/Con_Date_Required_for_Confirmed_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Con_Date_Required_for_Confirmed_Rate</fullName>
    <active>true</active>
    <description>When Confirmed rate is entered, you must enter confirmed date.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
OR(
ISBLANK (Confirmed_Date__c),
OR(
ISNULL(Confirmed_Rate__c)
)
))</errorConditionFormula>
    <errorMessage>Please enter confirmed date</errorMessage>
</ValidationRule>