force-app/main/default/objects/APR__c/validationRules/Conclusion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Conclusion_Date</fullName>
    <active>true</active>
    <description>Conclusion Date must be greater than Effective Date and must be within 1 year of Effective Date</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;StarTrack&apos;,
OR(
Conclusion_Date__c  &gt;  Confirmed_Date__c +365,
Conclusion_Date__c &lt; Confirmed_Date__c
)
)</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>Conclusion Date must be greater than Effective Date and must be within 1 year of Effective Date</errorMessage>
</ValidationRule>