force-app/main/default/objects/APR__c/validationRules/Conf_rate_not_greater_Walk_out_rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Conf_rate_not_greater_Walk_out_rate</fullName>
    <active>true</active>
    <description>Confirmed rate on Reduction status cannot be greater than walk out rate</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
ISPICKVAL( Status__c , &apos;Reduction&apos;),
OR (
NOT (
Confirmed_Rate__c &lt; Walk_out_Rate__c ),
Confirmed_Rate__c = 0
)
)</errorConditionFormula>
    <errorDisplayField>Confirmed_Rate__c</errorDisplayField>
    <errorMessage>Confirmed rate for Reduction status must be less than walk out rate</errorMessage>
</ValidationRule>