force-app/main/default/objects/APR__c/validationRules/Confirmed_Rate_Published_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Rate_Published_Rate</fullName>
    <active>false</active>
    <description>Confirmed Rate for Auto Accepted/Accepted Status must be equal or greater than the Published Rate</description>
    <errorConditionFormula>AND( 
OR( 
Confirmed_Rate__c &lt; Published_Rate__c
), 
OR( 
ISPICKVAL( Status__c , &apos;Auto-Accepted&apos;), 
ISPICKVAL( Status__c , &apos;Accepted&apos;)
) 
)</errorConditionFormula>
    <errorDisplayField>Confirmed_Rate__c</errorDisplayField>
    <errorMessage>Confirmed Rate must be equal or greater than Published Rate</errorMessage>
</ValidationRule>