force-app/main/default/objects/APR__c/validationRules/Confirmed_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Rate_Required</fullName>
    <active>true</active>
    <description>Validation required to ensure Confirmed Rate are not left blank</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
OR(
ISPICKVAL(Status__c, &apos;Reduction&apos;),
ISPICKVAL(Status__c, &apos;Accepted&apos;),
ISPICKVAL(Status__c, &apos;Deferral&apos;),
ISPICKVAL(Status__c, &apos;Go early&apos;)
),
OR(
ISNULL(Confirmed_Rate__c)
)
)</errorConditionFormula>
    <errorMessage>Confirmed Rate is required</errorMessage>
</ValidationRule>