force-app/main/default/objects/APR__c/validationRules/Confirmed_Rate_Walk_Out_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Rate_Walk_Out_Rate</fullName>
    <active>true</active>
    <description>Confirmed Rate for Accepted Status must be equal or greater than the Walk Out Rate</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
OR(
Confirmed_Rate__c &lt; Walk_out_Rate__c
),
OR(
ISPICKVAL( Status__c , &apos;Accepted&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Confirmed_Rate__c</errorDisplayField>
    <errorMessage>Confirmed Rate must be equal or greater than Walk Out Rate</errorMessage>
</ValidationRule>