force-app/main/default/objects/APR__c/validationRules/Dates_Locked_on_Reduction_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_Locked_on_Reduction_Status</fullName>
    <active>true</active>
    <description>Dates are locked in when Status is Reduction and Accepted</description>
    <errorConditionFormula>AND( 
 RecordType.DeveloperName = &apos;StarTrack&apos;,
OR( 
ISCHANGED( Confirmed_Date__c ), 
ISCHANGED( Conclusion_Date__c)
), 
OR(
ISPICKVAL( Status__c , &apos;Reduction&apos;),
ISPICKVAL( Status__c , &apos;Accepted&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>You cannot change the Effective and/or Conclusion Dates</errorMessage>
</ValidationRule>