force-app/main/default/objects/APR__c/validationRules/Deferrals_Confirmed_and_Published_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Deferrals_Confirmed_and_Published_date</fullName>
    <active>true</active>
    <description>Validation required to ensure Confirmed Date are not left blank</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
Confirmed_Date__c = Published_Date__c,
OR(
ISPICKVAL(Status__c, &apos;Deferral&apos;),
ISPICKVAL(Status__c, &apos;Go early&apos;)
)
)</errorConditionFormula>
    <errorMessage>For Deferrals or Go Early, the Published Date can not equal the Effective Date.</errorMessage>
</ValidationRule>