force-app/main/default/objects/APR__c/validationRules/Effective_and_Conclusion_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_and_Conclusion_Date_Required</fullName>
    <active>true</active>
    <description>Validation required to ensure Effective and Conclusion Dates are not left blank</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
OR(
ISPICKVAL(Status__c, &apos;Deferral&apos;), 
ISPICKVAL(Status__c, &apos;Go early&apos;)
),
OR(
ISNULL(Confirmed_Date__c),
ISNULL(Conclusion_Date__c)
)
)</errorConditionFormula>
    <errorMessage>Effective Date and/or Conclusion Date is required</errorMessage>
</ValidationRule>