force-app/main/default/objects/APR__c/validationRules/Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date</fullName>
    <active>true</active>
    <description>The Effective Date must be between 1/7 and 30/06 of the relevant year.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
OR(
Confirmed_Date__c &gt; DATE(YEAR(TODAY()) + 1, 6, 30),
Confirmed_Date__c &lt; DATE(YEAR(TODAY()), 7, 1)
)
)</errorConditionFormula>
    <errorDisplayField>Confirmed_Date__c</errorDisplayField>
    <errorMessage>Ensure the Effective Date must be between 1/7 and 30/06 of the relevant year.</errorMessage>
</ValidationRule>