force-app/main/default/objects/APR__c/validationRules/Effective_date_between_July_June.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_date_between_July_June</fullName>
    <active>false</active>
    <description>Effective date must be between 01 July and 30 June from the published date</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
NOT(
Confirmed_Date__c &gt;= (Published_Date__c - 123)),
Confirmed_Date__c &lt;= (Published_Date__c - 1)
)</errorConditionFormula>
    <errorMessage>Please enter a date between 01 July and 30 June from the published date</errorMessage>
</ValidationRule>