force-app/main/default/objects/APR__c/validationRules/Not_Account_Manager_cannot_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Account_Manager_cannot_edit</fullName>
    <active>true</active>
    <description>If a user is not an APR admin or System Administrator, they cannot edit an APR record unless they are the Account Manager on the Organisation</description>
    <errorConditionFormula>AND(
Record_Locked__c &lt;&gt; true,
$Permission.APR_Admin &lt;&gt; TRUE,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
Legal_Entity_Name_LookUp__r.Owner.Id &lt;&gt; $User.Id 
)</errorConditionFormula>
    <errorMessage>You cannot edit an APR where you are not the Account Manager for the Organisation</errorMessage>
</ValidationRule>