force-app/main/default/objects/APR__c/validationRules/Record_Locked_based_on_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked_based_on_Status</fullName>
    <active>true</active>
    <description>Exemption defaults to zero. Account Lost defaults to Published rate.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
OR(
ISCHANGED( Confirmed_Date__c ),
ISCHANGED( Confirmed_Rate__c ),
ISCHANGED( Conclusion_Date__c)
),
OR(
ISPICKVAL( Status__c , &apos;Account Lost&apos;),
ISPICKVAL( Status__c , &apos;Exemption&apos;)
)
)</errorConditionFormula>
    <errorMessage>You cannot change the Rates and Dates of &apos;Account Lost&apos; or &apos;Exemption&apos; Statuses</errorMessage>
</ValidationRule>