force-app/main/default/objects/APR__c/validationRules/Record_Locked_on_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked_on_Checkbox</fullName>
    <active>true</active>
    <description>Record Locked, when the ‘Entered in Team / PeopleSoft’ checkbox is checked</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
Entered_in_Team_PeopleSoft__c = true
&amp;&amp;
NOT(
(PRIORVALUE( Entered_in_Team_PeopleSoft__c ))=false),
$Permission.APR_Admin &lt;&gt; TRUE,
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
)</errorConditionFormula>
    <errorMessage>Record Locked, APR has been processed in ERP. No changes are allowed on APR records.</errorMessage>
</ValidationRule>