force-app/main/default/objects/APR__c/validationRules/Sub_status_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_status_is_required</fullName>
    <active>true</active>
    <description>To ensure where a sub-status is required it has been selected</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
ISPICKVAL(Status__c , &apos;Accepted&apos;),
ISNULL( TEXT(Sub_Status__c ) )
)</errorConditionFormula>
    <errorDisplayField>Sub_Status__c</errorDisplayField>
    <errorMessage>For Approved Status a sub-status is required.</errorMessage>
</ValidationRule>