force-app/main/default/objects/APR__c/validationRules/Unresolved_Expected_Outcome_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Unresolved_Expected_Outcome_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
ISPICKVAL(Status__c,&apos;Unresolved&apos;),
ISBLANK(Unresolved_Expected_Outcome_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Unresolved_Expected_Outcome_Date__c</errorDisplayField>
    <errorMessage>Unresolved Expected Outcome Date is required.</errorMessage>
</ValidationRule>