force-app/main/default/objects/APR__c/validationRules/Unresolved_Expected_Outcome_Date_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Unresolved_Expected_Outcome_Date_Today</fullName>
    <active>true</active>
    <description>With the unresolved expected outcome date validation, can you make sure that the date entered must be greater than today</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;StarTrack&apos;,
Unresolved_Expected_Outcome_Date__c &lt;= TODAY()
)</errorConditionFormula>
    <errorDisplayField>Unresolved_Expected_Outcome_Date__c</errorDisplayField>
    <errorMessage>The unresolved expected outcome date must be greater than today</errorMessage>
</ValidationRule>