force-app/main/default/objects/APR__c/listViews/All_APRs_2021.listView-meta.xml
<ListView>
    <fullName>All_APRs_2021</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account_Name__c</columns>
    <columns>Billing_Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confirmed_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/1/2021</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <label>All APRs 2021</label>
</ListView>