force-app/main/default/objects/APR__c/listViews/All_My_APRs_Current_Year2024.listView-meta.xml
<ListView>
    <fullName>All_My_APRs_Current_Year2024</fullName>
    <columns>Customer_Number__c</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Billing_Account_No__c</columns>
    <columns>Billing_Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Confirmed_Date__c</columns>
    <columns>Confirmed_Rate__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Walk_in_Rate__c</columns>
    <columns>Walk_out_Rate__c</columns>
    <columns>Customer_Correspondence_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_APR__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>APR__c.StarTrack</value>
    </filters>
    <label>All My APRs (2023 | FY24)</label>
    <language>en_US</language>
</ListView>