force-app/main/default/objects/APR__c/listViews/APR_Approvers_APR.listView-meta.xml
<ListView>
    <fullName>APR_Approvers_APR</fullName>
    <filterScope>Queue</filterScope>
    <label>APR Approvers</label>
    <queue>APR_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>