force-app/main/default/objects/APR__c/listViews/My_APRs_Last_Year.listView-meta.xml
<ListView>
    <fullName>My_APRs_Last_Year</fullName>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Billing_Account_Name__c</columns>
    <columns>Billing_Account_No__c</columns>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Sales_Team__c</columns>
    <columns>Published_Rate__c</columns>
    <columns>Confirmed_Rate__c</columns>
    <columns>Confirmed_Date__c</columns>
    <columns>Conclusion_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_APR__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>Last Years APRs (2022|FY23)</label>
    <language>en_US</language>
</ListView>