force-app/main/default/objects/APR__c/listViews/My_Auto_Accept_APRs.listView-meta.xml
<ListView>
    <fullName>My_Auto_Accept_APRs</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Billing_Account_Name__c</columns>
    <columns>Billing_Account_No__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Published_Rate__c</columns>
    <columns>Confirmed_Rate__c</columns>
    <columns>Confirmed_Date__c</columns>
    <columns>Conclusion_Date__c</columns>
    <columns>MHS_Published_Rate__c</columns>
    <columns>MHS_Confirmed_Rate__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Auto-Accepted</value>
    </filters>
    <filters>
        <field>My_APR__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>My Auto Accept (2021)</label>
    <language>en_US</language>
</ListView>